@@ -59,6 +59,8 @@ public class OrderServiceImpl implements OrderService {
     private final OrderMapper orderMapper;
     private final OrderItemMapper orderItemMapper;
     private final AddressMapper addressMapper;
+    private static final String DELIVERY_METHOD_NOT_FOUND = "Delivery method not found";
+    private static final String ORDER_ENTITY_NOT_FOUND = "Order entity not found";
 
 
     @Override
@@ -78,11 +80,11 @@ public class OrderServiceImpl implements OrderService {
 
         DeliveryMethod deliveryMethod = deliveryMethodRepository
                 .findByName("COURIER_SERVICE")
-                .orElseThrow(() -> new BusinessException("Delivery method not found"));
+                .orElseThrow(() -> new BusinessException(DELIVERY_METHOD_NOT_FOUND));
 
         PaymentMethod paymentMethod = paymentMethodRepository
                 .findByName("CREDIT_CARD")
-                .orElseThrow(() -> new BusinessException("Payment method not found"));
+                .orElseThrow(() -> new BusinessException(DELIVERY_METHOD_NOT_FOUND));
 
 
         Order order = Order.builder()
@@ -108,7 +110,7 @@ public class OrderServiceImpl implements OrderService {
                         .withUnitPrice(cartItem.getProduct().getRegularPrice())
                         .withSubtotal(cartItem.getQuantity() * cartItem.getProduct().getRegularPrice())
                         .build())
-                .collect(Collectors.toList());
+                .toList();
 
         order.setOrderItemList(orderItemList);
         order.setTotalPrice(this.currentTotalPrice(order));
@@ -124,7 +126,7 @@ public class OrderServiceImpl implements OrderService {
 
         Order order = orderRepository.findByUuid(orderUuid)
                 .orElseThrow(() ->
-                        new BusinessException("Order entity not found"));
+                        new BusinessException(ORDER_ENTITY_NOT_FOUND));
 
         if (orderRequest.getDeliveryMethodName() != null)
             order.setDeliveryMethod(deliveryMethodRepository.findByName(orderRequest.getDeliveryMethodName())
@@ -146,11 +148,11 @@ public class OrderServiceImpl implements OrderService {
     public OrderCreatedResponseDTO changeOrderDeliveryMethod(OrderDeliveryMethodRequestDTO orderChangeRequestDTO, UUID uuid) {
 
         Order order = orderRepository.findByUuid(uuid)
-                .orElseThrow(() -> new BusinessException("Order entity not found"));
+                .orElseThrow(() -> new BusinessException(ORDER_ENTITY_NOT_FOUND));
 
         DeliveryMethod deliveryMethod = deliveryMethodRepository
                 .findByName(orderChangeRequestDTO.getDeliveryMethodName())
-                .orElseThrow(() -> new BusinessException("Delivery method not found"));
+                .orElseThrow(() -> new BusinessException(DELIVERY_METHOD_NOT_FOUND));
 
         order.setDeliveryMethod(deliveryMethod);
 
@@ -162,7 +164,7 @@ public class OrderServiceImpl implements OrderService {
 
         Order order = orderRepository.findByUuid(uuid)
                 .orElseThrow(() ->
-                        new BusinessException("Order entity not found"));
+                        new BusinessException(ORDER_ENTITY_NOT_FOUND));
 
         PaymentMethod paymentMethod = paymentMethodRepository
                 .findByName(paymentMethodRequestDTO.getPaymentMethodName())
@@ -180,7 +182,7 @@ public class OrderServiceImpl implements OrderService {
 
         Order order = orderRepository.findByUuid(uuid)
                 .orElseThrow(() ->
-                        new BusinessException("Order entity not found"));
+                        new BusinessException(ORDER_ENTITY_NOT_FOUND));
 
         PaymentMethod foundPaymentMethod = paymentMethodRepository
                 .findByName(paymentMethod)
@@ -195,13 +197,14 @@ public class OrderServiceImpl implements OrderService {
     @Override
     @Transactional
     public OrderCreatedResponseDTO createOrder(OrderRequestDTO orderRequest, UUID cartUuid) {
-        if (!orderRequest.getTermsAccepted()) {
+
+        if (Boolean.FALSE.equals(orderRequest.getTermsAccepted())) {
             throw new BusinessException("Terms and conditions were not accepted", HttpStatus.BAD_REQUEST);
         }
 
         DeliveryMethod deliveryMethod = deliveryMethodRepository
                 .findByName(orderRequest.getDeliveryMethodName())
-                .orElseThrow(() -> new BusinessException("Delivery method not found"));
+                .orElseThrow(() -> new BusinessException(DELIVERY_METHOD_NOT_FOUND));
 
         PaymentMethod paymentMethod = paymentMethodRepository
                 .findByName(orderRequest.getPaymentMethodName())
@@ -289,7 +292,7 @@ public class OrderServiceImpl implements OrderService {
     private double currentTotalPrice(Order order) {
 
         double deliveryCost = order.getDeliveryCost();
-        double sumOfOrderItemSubTotal = order.getOrderItemList().stream().mapToDouble(orderItem -> orderItem.getSubtotal()).sum();
+        double sumOfOrderItemSubTotal = order.getOrderItemList().stream().mapToDouble(OrderItem::getSubtotal).sum();
 
         return deliveryCost + sumOfOrderItemSubTotal;
     }
